added what is a branch in git part

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <header id="git-header">
+      <h1>GitHub</h1>
+      <p>Git is Version Control Software</p>
+    </header>
+    <!-- What is Git Section -->
+    <section class="what-git">
+        <img class="git-img" src="img/github-img.jpg"/>
+        <div class="box-git">
+          <h2>What is Git?</h2>
+          <p>Git is a distributed version control system<br>
+           that allows developers to track changes made in their code</p>
+        </div>
+        <button class="btn"><a href="https://www.atlassian.com/git/tutorials/what-is-git" target="_blank">Read More</a></button>
+    </section>
+    <section id="git-section">
+        <div class="why-git">
+          <img class="img-section" src="img/git.png">
+          <div class="branch-float">
+            <h3>Why do developers need Git?</h3>
+            <p class="paragragh">Developers need Git for several  reasons: Git keeps a history of changes made to the codebase</p>
+          </div>
+        </div>
+        <div class="why-git-2">
+          <img class="img-section" src="/img/git2.png">
+          <div class="branch-float">
+              <h3>What is a branch in Git?</h3>
+              <p class="paragragh">A branch in Git is essentially a pointer to a specific commit in the repository's history</p>
+              <button class="btn-2"><a href="https://www.w3schools.com/git/git_branch.asp" target="_blank">Read More</a></button>
+          </div>
+      </div>
+    </section>
 </body>
 </html
