added some change on index.html page and style.css page

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -29,10 +29,11 @@
           <div class="branch-float">
             <h3>Why do developers need Git?</h3>
             <p class="paragragh">Developers need Git for several  reasons: Git keeps a history of changes made to the codebase</p>
+            <button class="btn-2"><a href="" target="_blank">Read More</a></button>
           </div>
         </div>
         <div class="why-git-2">
-          <img class="img-section" src="/img/git2.png">
+          <img class="img-section" src="img/git2.png">
           <div class="branch-float">
               <h3>What is a branch in Git?</h3>
               <p class="paragragh">A branch in Git is essentially a pointer to a specific commit in the repository's history</p>
