I added the footer to index.html

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -41,5 +41,9 @@
           </div>
       </div>
     </section>
+    <footer class="footer">
+      <p>Copyright 2024 - Made by Jordy Mukandayi</p>
+
+    </footer>
 </body>
 </html
