--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -91,7 +91,10 @@
         </form>
       </main>
       <footer>
-        <p>By Azharuddin Meyer</p>
+        <address>
+          <p>By Azharuddin Meyer</p>
+          <p>Email: azharuddinmeyer92@gmail.com</p>
+        </address>
       </footer>
     </div>
   </body>
