removed unused code in style.css, compressed image for faster page load, and fixed html errors.

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -13,8 +13,8 @@
       <p>Free,Open Source Distributed Version Control</p>
     </header>
     <main>
-      <article>
-        <div class="container">
+      <div class="container">
+        <article>
           <div class="img-container">
             <img
               src="./images/mohammad-rahmani-unsplash.jpg"
@@ -41,59 +41,59 @@
               >
             </p>
           </div>
+        </article>
+        <div class="flex-container">
+          <article>
+            <div>
+              <img
+                src="./images/Git-Logo-1788C.jpg"
+                alt="Git logo"
+                width="200"
+                height="100"
+              />
+            </div>
+            <div class="description">
+              <h2>Why do developers need Git?</h2>
+              <p>
+                Git provides a distributed, offline-friendly system for tracking
+                code changes and supporting collaboration. Its branching and
+                merging allow parallel development without impacting the main
+                codebase.<br /><br />
+                Git’s detailed history simplifies tracking and reverting
+                changes, while integration with platforms like GitHub enhances
+                team workflows, code reviews, and project deployment.
+              </p>
+
+              <a href="https://en.wikipedia.org/wiki/Git">Read more</a>
+            </div>
+          </article>
+          <article>
+            <div>
+              <img
+                src="./images/Git-Logo-1788C.jpg"
+                alt="Git logo"
+                width="200"
+                height="100"
+              />
+            </div>
+            <div class="description">
+              <h2>What is a branch in Git?</h2>
+              <p>
+                Git branch is essentially a pointer to a snapshot of your
+                changes.When working on fixing a bug, or adding a new features,
+                you create a new branch. This allows multiple people to work on
+                different issues without interfering with each other code.<br /><br />
+
+                Git branch also allows for smooth code review and testing via
+                pull request or merge request.
+              </p>
+              <a
+                href="https://www.atlassian.com/git/tutorials/using-branches#:~:text=Git%20branches%20are%20effectively%20a,branch%20to%20encapsulate%20your%20changes."
+                >Read more</a
+              >
+            </div>
+          </article>
         </div>
-      </article>
-      <div class="flex-container">
-        <article>
-          <div>
-            <img
-              src="./images/Git-Logo-1788C.jpg"
-              alt="Git logo"
-              width="200px"
-              height="100px"
-            />
-          </div>
-          <div class="description">
-            <h2>Why do developers need Git?</h2>
-            <p>
-              Git provides a distributed, offline-friendly system for tracking
-              code changes and supporting collaboration. Its branching and
-              merging allow parallel development without impacting the main
-              codebase.<br /><br />
-              Git’s detailed history simplifies tracking and reverting changes,
-              while integration with platforms like GitHub enhances team
-              workflows, code reviews, and project deployment.
-            </p>
-
-            <a href="https://en.wikipedia.org/wiki/Git">Read more</a>
-          </div>
-        </article>
-        <article>
-          <div>
-            <img
-              src="./images/Git-Logo-1788C.jpg"
-              alt="Git logo"
-              width="200px"
-              height="100px"
-            />
-          </div>
-          <div class="description">
-            <h2>What is a branch in Git?</h2>
-            <p>
-              Git branch is essentially a pointer to a snapshot of your
-              changes.When working on fixing a bug, or adding a new features, you
-              create a new branch. This allows multiple people to work on
-              different issues without interfering with each other code.<br /><br />
-
-              Git branch also allows for smooth code review and testing via pull
-              request or merge request.
-            </p>
-            <a
-              href="https://www.atlassian.com/git/tutorials/using-branches#:~:text=Git%20branches%20are%20effectively%20a,branch%20to%20encapsulate%20your%20changes."
-              >Read more</a
-            >
-          </div>
-        </article>
       </div>
     </main>
     <footer>
