fixed html errors and added alt description to img

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -18,7 +18,7 @@
           <div class="img-container">
             <img
               src="./images/mohammad-rahmani-unsplash.jpg"
-              alt=""
+              alt="A desktop screen showing programming code in a dark theme editor."
               width="700"
               height="256"
             />
@@ -29,7 +29,7 @@
               Git is a distributed version control system that tracks code
               changes and enables collaboration. Created by Linus Torvalds, it
               stores a project’s history in "commits," snapshots of all files at
-              specific points.<br /><br />
+              specific points.<br><br>
               Key features include branches, which allow for multiple
               development lines, and merging, to combine changes. Users can work
               offline and sync updates with remote repositories (like GitHub)
