change image from jpeg to webp for faster loading.

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -17,7 +17,7 @@
         <article>
           <div class="img-container">
             <img
-              src="./images/mohammad-rahmani-unsplash.jpg"
+              src="./images/mohammad-rahmani-unsplash.webp"
               alt="A desktop screen showing programming code in a dark theme editor."
               width="700"
               height="256"
