fixed html errors

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
@@ -21,7 +21,7 @@
               alt="A desktop screen showing programming code in a dark theme editor."
               width="700"
               height="256"
-            />
+            >
           </div>
           <div class="description">
             <h2>What is git</h2>
@@ -50,7 +50,8 @@
                 alt="Git logo"
                 width="200"
                 height="100"
-              />
+                loading="lazy"
+              >
             </div>
             <div class="description">
               <h2>Why do developers need Git?</h2>
@@ -74,7 +75,8 @@
                 alt="Git logo"
                 width="200"
                 height="100"
-              />
+                loading="lazy"
+              >
             </div>
             <div class="description">
               <h2>What is a branch in Git?</h2>
