fixed html errors

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -59,7 +59,7 @@
                 Git provides a distributed, offline-friendly system for tracking
                 code changes and supporting collaboration. Its branching and
                 merging allow parallel development without impacting the main
-                codebase.<br /><br />
+                codebase.<br><br>
                 Git’s detailed history simplifies tracking and reverting
                 changes, while integration with platforms like GitHub enhances
                 team workflows, code reviews, and project deployment.
@@ -84,7 +84,7 @@
                 Git branch is essentially a pointer to a snapshot of your
                 changes.When working on fixing a bug, or adding a new features,
                 you create a new branch. This allows multiple people to work on
-                different issues without interfering with each other code.<br /><br />
+                different issues without interfering with each other code.<br><br>
 
                 Git branch also allows for smooth code review and testing via
                 pull request or merge request.
