--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wireframe</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Add your HTML markup here -->
@@ -21,7 +21,7 @@
               alt="A desktop screen showing programming code in a dark theme editor."
               width="700"
               height="256"
-            >
+            />
           </div>
           <div class="description">
             <h2>What is git</h2>
@@ -29,17 +29,13 @@
               Git is a distributed version control system that tracks code
               changes and enables collaboration. Created by Linus Torvalds, it
               stores a project’s history in "commits," snapshots of all files at
-              specific points.<br><br>
+              specific points.<br /><br />
               Key features include branches, which allow for multiple
               development lines, and merging, to combine changes. Users can work
               offline and sync updates with remote repositories (like GitHub)
               using push and pull commands.
             </p>
-            <p>
-              <a href="https://en.wikipedia.org/wiki/Git"
-                >For more information</a
-              >
-            </p>
+            <a href="https://en.wikipedia.org/wiki/Git">For more information</a>
           </div>
         </article>
         <div class="flex-container">
@@ -51,7 +47,7 @@
                 width="200"
                 height="100"
                 loading="lazy"
-              >
+              />
             </div>
             <div class="description">
               <h2>Why do developers need Git?</h2>
@@ -59,12 +55,11 @@
                 Git provides a distributed, offline-friendly system for tracking
                 code changes and supporting collaboration. Its branching and
                 merging allow parallel development without impacting the main
-                codebase.<br><br>
+                codebase.<br /><br />
                 Git’s detailed history simplifies tracking and reverting
                 changes, while integration with platforms like GitHub enhances
                 team workflows, code reviews, and project deployment.
               </p>
-
               <a href="https://en.wikipedia.org/wiki/Git">Read more</a>
             </div>
           </article>
@@ -76,7 +71,7 @@
                 width="200"
                 height="100"
                 loading="lazy"
-              >
+              />
             </div>
             <div class="description">
               <h2>What is a branch in Git?</h2>
@@ -84,7 +79,7 @@
                 Git branch is essentially a pointer to a snapshot of your
                 changes.When working on fixing a bug, or adding a new features,
                 you create a new branch. This allows multiple people to work on
-                different issues without interfering with each other code.<br><br>
+                different issues without interfering with each other code.<br /><br />
 
                 Git branch also allows for smooth code review and testing via
                 pull request or merge request.
