Optimised the image for the web be resizing, and changing the format from jpeg to webp.Also  removed the old image

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -42,7 +42,7 @@
           <article>
             <div>
               <img
-                src="./images/Git-Logo-1788C.jpg"
+                src="./images/Git-Logo-1788C.webp"
                 alt="Git logo"
                 width="200"
                 height="100"
@@ -66,7 +66,7 @@
           <article>
             <div>
               <img
-                src="./images/Git-Logo-1788C.jpg"
+                src="./images/Git-Logo-1788C.webp"
                 alt="Git logo"
                 width="200"
                 height="100"
