--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wireframe</title>
+    <link rel="preload" href="./images/mohammad-rahmani-unsplash.webp" as="image">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
