--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,10 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <link rel="stylesheet" href="./css/style.css">
+
+    <header>
+      <h1>Git</h1>
+      <p>A Version Control Tool</p>
+    </header>
+  
+<body>
+
+  <main>
+    <div class="article">
+      <img src="./images/gits.png" alt="gits">
+      <h2>What is Git?</h2>
+      <p>Git is a distributed version control system used to track changes in source code.</p>
+      <a href="https://github.blog/developer-skills/programming-languages-and-frameworks/what-is-git-our-beginners-guide-to-version-control/">Read More</a>
+
+
+    </div>
+    <div class="article">
+      <img src="images/git2.png" alt="git2">
+      <h2>Why Do Developers Use Git?</h2>
+      <p>Most programmers use Git for several key reasons:Version Control,Git allows developers to track changes in their code over time</p>
+      <a href="https://www.coursera.org/articles/what-is-git">Read More</a>
+    </div>
+    <div class="article">
+      <img src="images/git3.png" alt="git3">
+      <h2>What is a branch in Git?</h2>
+      <p>
+        branches are a part of your everyday development process.
+         Git branches are effectively a pointer to a snapshot of your changes.
+         </p>
+         <a href="https://git-scm.com/book/en/v2/Git-Branching-Branches-in-a-Nutshell">Read More</a>
+
+         
+
+    </div>
+  </main>
+
+  <footer>
+    <p>Bestun Mohammedi<br>
+    <a href="https://github.com/bestunmoh">My github</a></p>
+  </footer>
+  
 </body>
-</html
+</html>
+
+  
