First-child, header, button to link, width in css

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,34 +12,36 @@
   <body>
     <!-- Add your HTML markup here -->
     <div class="Title">
-    <header><h1>GIT</h1></header>
-    <h3>Introduction of Git</h3>
+    <header>
+      <h1>GIT</h1>
+      <h3>Introduction of Git  -  System software</h3>
+    </header>
     </div>
   
 
     <main>
-      <div class="first">
-      <img class="pic" src="git.png" alt="Git" width="30%">
+      <section class="first">
+      <img class="pic" src="git.png" alt="Git">
       <h2>Git</h2>
-      <p>Git is a free, open-source version control system (VCS) that helps developers track changes to their code and collaborate on projects. 
-        It's considered the modern standard for software development and is the most widely used VCS in the world</p>
-      <button type="button">Read More</button>
-    </div>
+      <p>Git is a free, open-source version control system (VCS) that <i>helps developers track changes to their code and collaborate on projects</i>. 
+        It's considered the modern standard for software development and is the most widely used VCS in the world.</p>
+      <a href="https://docs.github.com/en/get-started/using-git/about-git">Read More</a>
+      </section>
     <div class="downside">
-    <div class="second">
-      <img class="pic" src="developer.jpeg" alt="Why do developers need Git" width="30%">
+    <section class="bottom">
+      <img class="pic" src="developer.jpeg" alt="Why do developers need Git">
       <h2>Why do developers need Git?</h2>
       <p>Git eliminates everything from the time wasted passing commits over a network connection to the man hours required to integrate changes in a centralized version control system. 
         It even makes better use of junior developers by giving them a safe environment to work in.</p>
-      <button type="button">Read More</button>
-      </div>
-      <div class="third">
-      <img class="pic" src="branch.png" alt="What is a branch in Git?" width="30%">
+      <a href="https://www.atlassian.com/git/tutorials/why-git#:~:text=Git%20is%20all%20about%20efficiency,safe%20environment%20to%20work%20in.">Read More</a>
+      </section>
+      <section class="bottom">
+      <img class="pic" src="branch.png" alt="What is a branch in Git?">
       <h2>What is a branch in Git</h2>
       <p>Git branches are effectively a pointer to a snapshot of your changes. 
         When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes.</p>
-        <button type="button">Read More</button>
-      </div>
+        <a href="https://www.atlassian.com/git/tutorials/using-branches#:~:text=In%20Git%2C%20branches%20are%20a,branch%20to%20encapsulate%20your%20changes.">Read More</a>
+      </section>
     </div>
       </main>
       <footer>
@@ -47,4 +49,4 @@
       </footer>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
-</html
+</html>
