created a form with required number of inputs such as name, email, color of t-shirt, size of t-shirt and delivery date.

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -1,29 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My form exercise</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>Product Pick</h1>
-    <h2>Hello</h2>
-  </header>
-  <main>
-  <form>
-    <!-- write your html here-->
-    <!-- try writing out the requirements first-->
-  </form>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>My form exercise</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Product Pick</h1>
+      <h2>Hello</h2>
+    </header>
+    <main>
+      <form>
+        <!-- write your html here-->
+        <label for="name">Name</label><br />
+        <input
+          type="text"
+          name="name"
+          id="name"
+          placeholder="Name"
+          required
+          minlength="2"
+        /><br />
+        <label for="email">Email</label><br />
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Email Address"
+          required
+        /><br />
+        <label for="t-shirt">Choose a color of t-shirt:</label>
+        <select id="t-shirt" name="cars" required>
+          <option value="" disabled selected>
+            Please choose an option
+          </option>
+          <option value="black">Black</option>
+          <option value="Green">Green</option>
+          <option value="blue">Blue</option></select
+        ><br />
+        <label for="size">Size of t-shirt:</label><br />
+        <select id="size" name="size" required>
+          <option value="" disabled selected>Please choose an option</option>
+          <option value="xs">XS</option>
+          <option value="s">S</option>
+          <option value="m">M</option>
+          <option value="l">L</option>
+          <option value="xl">XL</option>
+          <option value="xxl">XXL</option></select
+        ><br />
+        <label for="delivery">Delivery Date</label>
+        <input
+          type="date"
+          id="delivery"
+          name="delivery"
+          min="2024-12-05"
+          max="2025-01-02"
+          required
+        />
 
-  </main>
-  <footer>
-    <!-- change to your name-->
-    <h2>By HOMEWORK SOLUTION</h2>
-  </footer>
-</body>
+        <button type="submit">Submit</button>
+      </form>
+      <!-- Let's write out our testable criteria:
 
+            I have used HTML and CSS only.
+
+          HTML
+          My form is semantic html.
+          All inputs have associated labels.
+          My Lighthouse Accessibility score is 100.
+          I require a valid name. I have defined a valid name as a text string of two characters or more.
+          I require a valid email.
+          I require one colour from a defined set of 3 colours.
+          I require one size from a defined set of 6 sizes.
+          I require one date from a constrained date range.
+
+          CSS
+          I show which element is focused.
+          My Lighthouse Accessibility score is 100.-->
+    </main>
+    <footer>
+      <!-- change to your name-->
+      <h2>By Mansoor Munawar</h2>
+    </footer>
+  </body>
 </html>
