removed line break element from html

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -16,7 +16,7 @@
     <main>
       <form>
         <!-- write your html here-->
-        <label for="name">Name</label><br />
+        <label for="name">Name</label>
         <input
           type="text"
           name="name"
@@ -25,7 +25,7 @@
           required
           minlength="2"
         /><br />
-        <label for="email">Email</label><br />
+        <label for="email">Email</label>
         <input
           type="email"
           name="email"
@@ -42,7 +42,7 @@
           <option value="Green">Green</option>
           <option value="blue">Blue</option></select
         ><br />
-        <label for="size">Size of t-shirt:</label><br />
+        <label for="size">Size of t-shirt:</label>
         <select id="size" name="size" required>
           <option value="" disabled selected>Please choose an option</option>
           <option value="xs">XS</option>
