Fix styling and content

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -26,7 +26,7 @@
 
    <div class="p1">
     <h1>Why do developers need Git</h1>
-    <img src="photos/git.png" alt=""  width="300px" >
+    <img src="photos/gitt.png" alt=""  width="400px" >
     <p class="Paragraph"> Git is all about efficiency. For developers, it eliminates everything from the time wasted passing commits over a network connection to the man hours required to integrate changes in a centralized version control system. It even makes better use of junior developers by giving them a safe environment to work in <a class="links" href="https://www.quora.com/Why-does-a-front-end-developer-need-to-learn-git-Atleast-I-see-multiple-sites-that-says-so">read more</a></p>
     
   </div>
