--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -15,16 +15,16 @@
   <main>
   <form action="result.html method="GET">
     <div> 
-      <label for="Name">Name</label>
+      <label for="name">Name</label>
       <input type="text"name="name" id="name" required>
     </div>
     <div>
-      <label for="Email">Email</label>
+      <label for="email">Email</label>
       <input type="email"name="email" id="email" required>
     </div>
     <div>
-      <label for="Tshirt-color">Tshirt-color</label>
-      <select id="Tshirt-color"name="Tshirt-color"required>
+      <label for="tshirt-color">Tshirt-color</label>
+      <select id="tshirt-color"name="Tshirt-color"required>
         <option value="" disabled selected>Select a color</option>
         <option value="red">Red</option>
         <option value="blue">Blue</option>
@@ -32,8 +32,8 @@
       </select>
     </div> 
     <div>
-      <label for="Tshirt-size">Tshirt-size</label>
-    <select id="Tshirt-size"name="Tshirt-size"required>
+      <label for="tshirt-size">Tshirt-size</label>
+    <select id="tshirt-size"name="Tshirt-size"required>
       <option value="" disabled selected>Select a size</option>
       <option value="XS">XS</option>
       <option value="S">S</option>
