--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -5,11 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no" />
+  <meta name="description" content="This page is informative with some of the most impotents
+          methods of Git and how to use it in the professional way" />
+  <script src="https://kit.fontawesome.com/c0b874b18b.js" crossorigin="anonymous" defer></script>
   <link href="//fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" type="image/x-icon" href="img/github-logo-5F384D0265-seeklogo.com.png" />
-  <script src="https://kit.fontawesome.com/c0b874b18b.js" crossorigin="anonymous"></script>
   <title>Git WireFrame</title>
   <link rel="stylesheet" href="/Wireframe/css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 </head>
 
 <body>
@@ -22,7 +26,7 @@
   </header>
   <main>
     <article class="hero">
-      <img src="/Wireframe/img/giff.gif" alt="Giff showing how works the git control version" class="img-hero">
+      <img src="/Wireframe/img/giff.gif" alt="Gif of video showing how works the git control version" class="img-hero">
       <h2>What is Git</h2>
       <p class="overlay">
         By far, the most widely used modern version control system in the world today is Git. Git is a mature, actively
@@ -41,11 +45,12 @@
         version control systems like CVS or Subversion (also known as SVN), in Git, every developer's working copy of
         the code is also a repository that can contain the full history of all changes.
       </p>
-      <a class="button" href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read More</a>
+      <a class="button" href="https://git-scm.com/book/en/v2/Getting-Started-What-is-Git%3F" target="_blank">Read
+        More</a>
     </article>
     <section class="wrapper">
       <article class="article-wrapper">
-        <img src="/Wireframe/img/git.jpg" alt="image of git" class="img-article">
+        <img src="/Wireframe/img/git.jpg" alt="image of team discussing git control version of their projects" class="img-article">
         <h2>Why do developers need Git?</h2>
         <p class="overlay">
           Developers need Git because it is a vital tool for version control that facilitates efficient collaboration,
@@ -62,11 +67,12 @@
           changes were made. If a bug is introduced, Git allows for quick reversion to a previous state, minimizing
           disruption.
         </p>
-        <a class="button" href="https://www.coursera.org/articles/what-is-git" target="_blank">Read More</a>
+        <a class="button" href="https://www.coursera.org/articles/what-is-git"
+          aria-label="Read more about why developers need Git on Coursera" target="_blank">Read More</a>
       </article>
 
       <article class="article-wrapper">
-        <img src="/Wireframe/img/git.png" alt="image of git" class="img-article">
+        <img src="/Wireframe/img/git.png" alt="image of 3 computers working in the same project but different branches" class="img-article">
         <h2>What is a branch in Git?</h2>
         <p class="overlay">
           In Git, a branch is a separate line of development that allows developers to work on different features, bug
@@ -84,23 +90,32 @@
           organizing work clearly. Overall, branches are crucial for effective version control, enabling teams to
           innovate while preserving code integrity.
         </p>
-        <a class="button" href="https://www.javatpoint.com/git-branch" target="_blank">Read More</a>
+        <!-- <a class="button" href="https://www.javatpoint.com/git-branch" target="_blank">Read More</a> -->
+        <a class="button" href="https://www.javatpoint.com/git-branch" target="_blank"
+          aria-label="Read more about Git branches (opens in a new tab)">
+          Read more
+        </a>
       </article>
     </section>
   </main>
   <footer>
-    <p class="media-text">&copy Karla Grajales <i class="fa-regular fa-face-laugh-wink"></i></p>
+    <p class="media-text">&copy Karla Grajales <i class="fa-regular fa-face-laugh-wink"
+        aria-label="Karla is the name of the developer Author"></i></p>
     <div class="social">
-      <a class="facebook" href="https://www.facebook.com/groups/front.designer" target="_blank"><i
-          class="fa-brands fa-facebook"></i></a>
-      <a class="twitter" href="https://twitter.com/explore" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-      <a class="youtube" href="https://www.youtube.com/watch?v=puLSsuG1YE4" target="_blank"><i
-          class="fa-brands fa-youtube"></i></a>
-      <a class="instagram" href="https://www.instagram.com/codeyourfuture_/?hl=es" target="_blank"><i
-          class="fa-brands fa-instagram"></i></a>
-      <a class="github" href="https://github.com/Grajales-K" target="_blank"><i class="fa-brands fa-github"></i></a>
+      <a class="facebook" href="https://www.facebook.com/groups/front.designer" target="_blank"
+        aria-label="Visit our Facebook group"><i class="fa-brands fa-facebook"></i></a>
+      <a class="twitter" href="https://twitter.com/explore" target="_blank"
+        aria-label="link to CodeYourFuture twitter"><i class="fa-brands fa-twitter"></i></a>
+      <a class="youtube" href="https://www.youtube.com/watch?v=puLSsuG1YE4" target="_blank"
+        aria-label="Link to CodeYourFuture youtube video"><i class="fa-brands fa-youtube"></i></a>
+      <a class="instagram" href="https://www.instagram.com/codeyourfuture_/?hl=es" target="_blank"
+        aria-label="Link to CodeYourFuture Instagram"><i class="fa-brands fa-instagram"></i></a>
+      <a class="github" href="https://github.com/Grajales-K" target="_blank" aria-label="Link to Karla Github"><i
+          class="fa-brands fa-github"></i></a>
     </div>
   </footer>
+
+
 
 </body>
 
