removed all img png, gif, jpg.

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -26,7 +26,7 @@
   </header>
   <main>
     <article class="hero">
-      <img src="/Wireframe/img/giff.gif" alt="Gif of video showing how works the git control version" class="img-hero">
+      <img src="/Wireframe/img/" alt="Gif of video showing how works the git control version" class="img-hero">
       <h2>What is Git</h2>
       <p class="overlay">
         By far, the most widely used modern version control system in the world today is Git. Git is a mature, actively
