update html with the webp root images

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -26,7 +26,7 @@
   </header>
   <main>
     <article class="hero">
-      <img src="/Wireframe/img/" alt="Gif of video showing how works the git control version" class="img-hero">
+      <img src="/Wireframe/img/giff.webp" alt="Gif of video showing how works the git control version" class="img-hero">
       <h2>What is Git</h2>
       <p class="overlay">
         By far, the most widely used modern version control system in the world today is Git. Git is a mature, actively
@@ -50,7 +50,7 @@
     </article>
     <section class="wrapper">
       <article class="article-wrapper">
-        <img src="/Wireframe/img/git.jpg" alt="image of team discussing git control version of their projects" class="img-article">
+        <img src="/Wireframe/img/teamGitworkflow.webp" alt="image of team discussing git control version of their projects" class="img-article">
         <h2>Why do developers need Git?</h2>
         <p class="overlay">
           Developers need Git because it is a vital tool for version control that facilitates efficient collaboration,
@@ -72,7 +72,7 @@
       </article>
 
       <article class="article-wrapper">
-        <img src="/Wireframe/img/git.png" alt="image of 3 computers working in the same project but different branches" class="img-article">
+        <img src="/Wireframe/img/git.webp" alt="image of 3 computers working in the same project but different branches" class="img-article">
         <h2>What is a branch in Git?</h2>
         <p class="overlay">
           In Git, a branch is a separate line of development that allows developers to work on different features, bug
@@ -90,7 +90,6 @@
           organizing work clearly. Overall, branches are crucial for effective version control, enabling teams to
           innovate while preserving code integrity.
         </p>
-        <!-- <a class="button" href="https://www.javatpoint.com/git-branch" target="_blank">Read More</a> -->
         <a class="button" href="https://www.javatpoint.com/git-branch" target="_blank"
           aria-label="Read more about Git branches (opens in a new tab)">
           Read more
